# config

./: .gitignore  README.md  delect.sh
src/: list.h  option.c  option.h
test/: CMakeLists.txt  test.c
